# RenderJan

./: .gitignore  CMakeLists.txt  ReadMe.txt  renderjan.sln  test_scene_file.json
renderjan/: 3DDataStructs.cpp  BMPWriter.cpp  BMPWriter.h  DataDefinitions.h  Face.cpp  Face.h  Image.h  LightSource.cpp  LightSource.h  MathFunctions.cpp  MathFunctions.h  Point.cpp  Point.h  ReadMe  ReadMe.txt  RenderViewer.cpp  RenderViewer.h  Sphere.cpp  Sphere.h  Vertex.cpp  Vertex.h  renderingFunctions.cpp  renderingFunctions.h  renderjan.cpp  renderjan.vcxproj  renderjan.vcxproj.filters  resource.h  stdafx.cpp
src/: .RenderViewer.cpp.kate-swp  BMPWriter.cpp  BMPWriter.h  Camera.cpp  Camera.h  DataDefinitions.h  Face.cpp  Face.h  LightSource.cpp  LightSource.h  Mat4x4.cpp  Mat4x4.h  Material.h  MathFunctions.cpp  MathFunctions.h  Montecarlo.h  Point.cpp  Point.h  QTRenderViewer.cpp  RenderViewer.cpp  RenderViewer.h  SampleViewer.cpp  SampleViewer.h  Scene.cpp  Scene.h  SceneElement.cpp  SceneElement.h  Sphere.cpp  Sphere.h  Vertex.cpp  Vertex.h  renderingFunctions.cpp  renderingFunctions.h  renderjan.cpp  sampler.h
